# chess-engine

./: engines.py  profilegame.py  pyproject.toml  rungame.py
engine/: ab_depth_prune.py  alpha_beta.py  base.py  basilisk.py  board.py  evaluators.py  minmax.py
tests/: test_fens.py
